--- a/.github/workflows/Beta.yml
+++ b/.github/workflows/Beta.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  release-alpha:
+  release-beta:   # <--- cambiar aquí
     runs-on: ubuntu-latest
     strategy:
       matrix:
