--- a/.github/workflows/Alpha.yml
+++ b/.github/workflows/Alpha.yml
@@ -3,32 +3,37 @@ name: Upload Alpha Addons
 on:
   push:
     paths:
-      - 'Alpha/**'
+      - 'Alpha/**'   # Solo se ejecuta si hay cambios en la carpeta Alpha
   workflow_dispatch:
 
 jobs:
   release-alpha:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        addon: ${{ fromJson('["ActionBarTweaks","OtroAddon"]') }}  # o dinámico con jq
+    outputs:
+      addons: ${{ steps.detect.outputs.addons }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Copy addon to root
+      - name: Detect Alpha addons
+        id: detect
         run: |
-          cp -r Alpha/${{ matrix.addon }}/. .
-          ls -la
-          cat .pkgmeta
-          cat *.toc
+          addons="[]"
+          for dir in Alpha/*/; do
+            if [ -f "$dir/.pkgmeta" ]; then
+              addon_name=$(basename "$dir")
+              addons=$(echo "$addons" | jq -c ". += [\"$addon_name\"]")
+              echo "Found Alpha addon: $addon_name"
+            fi
+          done
+          echo "addons=$addons" >> $GITHUB_OUTPUT
 
-      - name: Run BigWigs Packager
+      - name: Upload Alpha addons
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}
+          args: ${{ join(fromJson(steps.detect.outputs.addons), " ") }}
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
