--- a/.github/workflows/Beta.yml
+++ b/.github/workflows/Beta.yml
@@ -7,13 +7,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  release-beta:
+  detect-beta:
     runs-on: ubuntu-latest
+    outputs:
+      addons: ${{ steps.detect.outputs.addons }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: Detect Beta addons
         id: detect
@@ -28,14 +28,21 @@ jobs:
           done
           echo "addons=$addons" >> $GITHUB_OUTPUT
 
-      - name: Run BigWigs Packager for Beta
-        uses: BigWigsMods/packager@v2
-        run: |
-          for addon in $(echo '${{ steps.detect.outputs.addons }}' | jq -r '.[]'); do
-            cp -r Beta/$addon/. .
-            echo "Packaging $addon as beta..."
-            $GITHUB_ACTION_PATH/release.sh -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n $addon --build-type beta
-          done
+  release-beta:
+    needs: detect-beta
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        addon: ${{ fromJson(needs.detect-beta.outputs.addons) }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Copy addon to root
+        run: cp -r Beta/${{ matrix.addon }}/. .
+
+      - name: Run BigWigs Packager
+        run: $GITHUB_ACTION_PATH/release.sh -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }} --build-type beta
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
