--- a/.github/workflows/Upload Addons to CurseForge.yaml
+++ b/.github/workflows/Upload Addons to CurseForge.yaml
@@ -2,8 +2,6 @@ name: Upload Addons to CurseForge
 
 on:
   push:
-    tags:
-      - 'v*'
     paths:
       - 'Alpha/**'
       - 'Beta/**'
@@ -51,26 +49,19 @@ jobs:
     needs: find-addons
     if: needs.find-addons.outputs.alpha-addons != '[]'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        addon: ${{ fromJson(needs.find-addons.outputs.alpha-addons) }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Copy Alpha addon to root
+      - name: Package and upload Alpha addons
         run: |
-          cp -r Alpha/${{ matrix.addon }}/. .
-          ls -la
-          cat .pkgmeta
-          cat *.toc
-
-      - name: Run BigWigs Packager (Alpha)
-        uses: BigWigsMods/packager@v2
-        with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }} -t ${{ github.ref_name }}
+          for addon in $(echo '${{ needs.find-addons.outputs.alpha-addons }}' | jq -r '.[]'); do
+            echo "Packaging $addon as alpha..."
+            cp -r Alpha/$addon/. .
+            $GITHUB_ACTION_PATH/release.sh -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n $addon --build-type alpha
+          done
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
@@ -79,26 +70,19 @@ jobs:
     needs: find-addons
     if: needs.find-addons.outputs.beta-addons != '[]'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        addon: ${{ fromJson(needs.find-addons.outputs.beta-addons) }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Copy Beta addon to root
+      - name: Package and upload Beta addons
         run: |
-          cp -r Beta/${{ matrix.addon }}/. .
-          ls -la
-          cat .pkgmeta
-          cat *.toc
-
-      - name: Run BigWigs Packager (Beta)
-        uses: BigWigsMods/packager@v2
-        with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }} -t ${{ github.ref_name }}
+          for addon in $(echo '${{ needs.find-addons.outputs.beta-addons }}' | jq -r '.[]'); do
+            echo "Packaging $addon as beta..."
+            cp -r Beta/$addon/. .
+            $GITHUB_ACTION_PATH/release.sh -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n $addon --build-type beta
+          done
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
