--- a/.github/workflows/Upload Addons to CurseForge.yaml
+++ b/.github/workflows/Upload Addons to CurseForge.yaml
@@ -64,7 +64,8 @@ jobs:
       - name: Run BigWigs Packager (Alpha)
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }} --build-type alpha
+          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}-alpha
+
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
@@ -88,7 +89,8 @@ jobs:
       - name: Run BigWigs Packager (Beta)
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }} --build-type beta
+          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}-beta
+
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
