--- a/.github/workflows/Upload Addons to CurseForge.yaml
+++ b/.github/workflows/Upload Addons to CurseForge.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Run BigWigs Packager (Alpha)
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}
+          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}-Alpha
 
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
@@ -89,7 +89,7 @@ jobs:
       - name: Run BigWigs Packager (Beta)
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}
+          args: -g 11.0.5 -w 11.0.5 -p 1360857 -m .pkgmeta -n ${{ matrix.addon }}-Beta
 
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
