--- a/.github/workflows/upload_addons.yml
+++ b/.github/workflows/upload_addons.yml
@@ -37,4 +37,4 @@ jobs:
             fi
           done
         env:
-          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+          CF_API_KEY: ${{ secrets.CF_API_KEY }}
